# SelfieSorter

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt
docs/: Makefile  conf.py  index.rst  make.bat  requirements.txt
docs/_templates/autosummary/: class.rst.jinja2
docs/api/: index.rst
docs/api/_autosummary/: selfie_sorter.cli.rst  selfie_sorter.coarse.rst  selfie_sorter.config.rst  selfie_sorter.constants.rst  selfie_sorter.dedupe.rst  selfie_sorter.detector.rst  selfie_sorter.metadata.rst  selfie_sorter.router.rst  selfie_sorter.rst  selfie_sorter.sorter.rst
docs/getting-started/: cli.rst  configuration.rst  index.rst  installation.rst  quickstart.rst  troubleshooting.rst  workflow.rst
src/selfie_sorter/: __init__.py  censor.py  cli.py  coarse.py  config.py  constants.py  dedupe.py  detector.py  metadata.py  router.py  sorter.py
